# tokenizer-ui

./: .gitignore  README.md  admin.py  courier.py  database.py  database.sql  index.html  main.py  package.json  public.py  user.py
.github/workflows/: e2e-test.yml
backend/: main.py  pyproject.toml
modules/: OnlineBiddingManangementSystem.docx
templates/: admin_header.html  admin_home.html  admin_manage_category.html  admin_manage_courier.html  admin_manage_subcat.html  admin_view_auction.html  admin_view_bid.html  admin_view_payment.html  admin_view_user.html  admin_view_winner.html  courier_header.html  courier_home.html  courier_view_assign_orders.html  footer.html  index.html  login.html  public_header.html  user_assign_order.html  user_header.html  user_home.html  user_make_bid.html  user_make_payment.html  user_manage_auction.html  user_manage_product.html  user_reg.html  user_view_Winner_details.html  user_view_bid.html  user_view_other_auctions.html  user_view_payments.html
test/: e2e-screenshot.js
